[project]
name = "housing-regression-mle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.33",
    "category-encoders>=2.8.1",
    "evidently>=0.7.12",
    "fastapi>=0.116.1",
    "great-expectations==1.5.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.5",
    "mlflow>=3.3.1",
    "nbformat>=5.10.4",
    "numpy==1.26.4",
    "optuna>=4.5.0",
    "pandas==2.1.1",
    "polars>=1.32.3",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "streamlit>=1.48.1",
    "xgboost==3.0.4",
]
